--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,10 +2,25 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form|crispy }}
-  <button type="submit">Login</button>
-</form>
+<!-- Primer Login con el formato del segundo -->
+<div class="d-flex justify-content-center align-items-center vh-100">
+  <div class="login-container">
+      <h3 class="text-center mb-4">Inicio de Sesión</h3>
+      <form method="post">
+          {% csrf_token %}
+          {{ form|crispy }}
+          <div class="d-grid">
+              <button type="submit" class="btn btn-primary">
+                  Iniciar Sesión
+              </button>
+          </div>
+          <div class="text-center mt-3">
+              <p>
+                  ¿No tienes una cuenta? <a href="{% url 'signup' %}">Regístrate</a>
+              </p>
+          </div>
+      </form>
+  </div>
+</div>
 {% endblock content %}
+
