--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -4,10 +4,25 @@
 {% block title %}Registro{% endblock %}
 
 {% block content %}
-<h2>Registro</h2>
+		<!-- Primer Formulario -->
 <form method="post">
-  {% csrf_token %}
-  {{ form|crispy }}
-  <button type="submit">Registrarse</button>
-</form> 
+  <div class="d-flex justify-content-center align-items-center vh-100">
+    <div class="register-container">
+        <h3 class="text-center mb-4">Registro</h3>
+        <form method="post" class='register-form'>
+            {% csrf_token %}
+            <div class="mb-3 letter-form">
+              {{form | crispy}}
+            </div>
+            <div class="d-grid">
+                <button type="submit" class="btn btn-primary">Registrarse</button>
+            </div>
+            <div class="text-center mt-3">
+              <p>
+                  ¿Ya tienes cuenta? <a href="{% url 'login' %}">Inicia Sesión</a>
+              </p>
+          </div>
+        </form>
+    </div>
+</div>
 {% endblock content %}
