--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,3 +73,57 @@ body {
     font-size: .6875rem;
     color: rgb(241, 236, 236);
 }
+
+
+.form-container{
+    color: white;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 1rem;
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+}
+
+
+.foto-container {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+#foto-preview {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+input[type="file"] {
+    display: none; /* Ocultamos el input de tipo file */
+}
+
+label[for="id_foto"] {
+    cursor: pointer; 
+    font-weight: bold;
+    color: #007bff;
+}
+
+ul .list-group-item {
+    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.6); /* Blanco con 80% de opacidad */
+    padding: .625rem;
+    margin: .1875rem;
+}
+
+.user-name{
+    color: white;
+}
+
+.perfil-seccion{
+    color: white;
+}
