--- a/templates/_base.html
+++ b/templates/_base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{% block title %}Ringo{% endblock %}</title>
@@ -23,10 +24,9 @@
 		{% block extra_css %}{% endblock %}
 	</head>
 	<body>
-		<!-- Barra de navegación combinada -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container">
-				<a class="navbar-brand" href="{% url 'home' %}">Ringo</a>
+				<a class="navbar-brand" href="{% url 'home' %}">RinGo</a>
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -39,28 +39,37 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 						{% if user.is_authenticated %}
 						<li class="nav-item">
-							<a class="nav-link" href="{% url 'perfil_redireccion' %}"
-								>Mi Perfil</a
-							>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a>
+							<a class="nav-link" href="{% url 'perfil_redireccion' %}">
+								<!-- Foto de perfil -->
+								{% if perfil and perfil.foto %}
+									<img 
+										src="{{ perfil.foto.url }}" 
+										alt="Foto de perfil" 
+										class="rounded-circle" 
+										style="width: 30px; height: 30px; object-fit: cover; margin-right: 8px;" />
+								{% else %}
+									<img 
+										src="{% static 'img/default-user.png' %}" 
+										alt="Foto de perfil por defecto" 
+										class="rounded-circle" 
+										style="width: 30px; height: 30px; object-fit: cover; margin-right: 8px;" />
+								{% endif %}
+								Mi Perfil
+							</a>
 						</li>
 						{% else %}
-						<!-- No se agregan las opciones de inicio de sesión y registro -->
 						{% endif %}
 					</ul>
 				</div>
 			</div>
 		</nav>
-
+		
 		<!-- Contenido de la página -->
 		<div class="container">{% block content %} {% endblock %}</div>
-
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-		{% block extra_js %}{% endblock %}
+		<script src="{% static 'js/scripts.js' %}"></script>
 	</body>
 </html>
