--- a/templates/perfil/perfil_form.html
+++ b/templates/perfil/perfil_form.html
@@ -1,27 +1,45 @@
-{% extends "_base.html" %} {% block content %}
+{% extends "_base.html" %}{% load static %} {% block content %}
 
-<div class="container mt-5 d-flex justify-content-center">
-	<div class="col-md-6">
-		<h2 class="text-center mb-4">Crear Perfil</h2>
-		<form method="post" action="" enctype="multipart/form-data">
+<div class="container mt-5 d-flex justify-content-center form-container mb-5">
+	<div class="col-md-4">
+		<h3 class="text-center mb-4 mt-5">
+			{% if object.pk %}
+				Editar Perfil
+			{% else %}
+				Crear Perfil
+			{% endif %}
+		</h3>
+		<form method="post" action="" enctype="multipart/form-data" class='form-perfil'>
 			{% csrf_token %}
 
 			<!-- Foto de Perfil -->
-			<div class="form-group mb-3">
-				<label for="id_foto" class="form-label">Foto de Perfil</label>
-				{{ form.foto }} {% if form.foto.errors %}
-				<div class="text-danger">{{ form.foto.errors }}</div>
+			<div class="form-group mb-3 text-center">
+				<div class="foto-container">
+					<img 
+						src="{% if form.foto.value %}{{ form.foto.value.url }}{% else %}{% static 'img/default-user.png' %}{% endif %}" 
+						alt="Foto de Perfil" 
+						id="foto-preview" 
+						class="img-thumbnail rounded-circle" 
+						style="width: 150px; height: 150px; object-fit: cover;" 
+					/>
+				</div>
+				
+				<label for="id_foto" class="form-label">Seleccionar Foto</label>
+				{{ form.foto }}
+
+				{% if form.foto.errors %}
+					<div class="text-danger">{{ form.foto.errors }}</div>
 				{% endif %}
 			</div>
 
-			<!-- Mostrar errores de formulario, si existen -->
+			<!-- Error de Formulario -->
 			{% if form.non_field_errors %}
-			<div class="alert alert-danger">{{ form.non_field_errors }}</div>
+				<div class="alert alert-danger">{{ form.non_field_errors }}</div>
 			{% endif %}
 
 			<!-- Nombre del Perfil -->
 			<div class="form-group mb-3">
-				<label for="id_nombre_perfil" class="form-label">Apodo</label>
+				<label for="id_nombre_perfil" class="form-label">Nombre</label></p>
 				{{ form.nombre_perfil }} {% if form.nombre_perfil.errors %}
 				<div class="text-danger">{{ form.nombre_perfil.errors }}</div>
 				{% endif %}
@@ -29,11 +47,23 @@
 
 			<!-- Fecha de Nacimiento -->
 			<div class="form-group mb-3">
-				<label for="id_fecha_nacimiento" class="form-label"
-					>Fecha de Nacimiento</label
+				<label for="id_fecha_nacimiento" class="form-label">Fecha de Nacimiento</label>
+				<input 
+					type="date" 
+					name="fecha_nacimiento" 
+					value="{{ form.fecha_nacimiento.value|date:'Y-m-d' }}" 
+					class="form-control"
 				>
-				{{ form.fecha_nacimiento }} {% if form.fecha_nacimiento.errors %}
-				<div class="text-danger">{{ form.fecha_nacimiento.errors }}</div>
+				{% if form.fecha_nacimiento.errors %}
+					<div class="text-danger">{{ form.fecha_nacimiento.errors }}</div>
+				{% endif %}
+			</div>
+
+			<!-- Género -->
+			<div class="form-group mb-3">
+				<label for="id_genero" class="form-label">Género</label>
+				{{ form.genero }} {% if form.genero.errors %}
+				<div class="text-danger">{{ form.genero.errors }}</div>
 				{% endif %}
 			</div>
 
@@ -53,21 +83,12 @@
 				{% endif %}
 			</div>
 
-			<!-- Género -->
-			<div class="form-group mb-3">
-				<label for="id_genero" class="form-label">Género</label>
-				{{ form.genero }} {% if form.genero.errors %}
-				<div class="text-danger">{{ form.genero.errors }}</div>
-				{% endif %}
-			</div>
-
 			<!-- Botón de enviar -->
-			<div class="d-flex justify-content-between mt-4">
+			<div class="d-flex justify-content-between mt-4 mb-5">
 				<button type="submit" class="btn btn-primary">Guardar</button>
 				<a href="{% url 'home' %}" class="btn btn-secondary">Cancelar</a>
 			</div>
 		</form>
 	</div>
 </div>
-
 {% endblock %}
