interfaz de usuario terminada

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
           <button type="submit" class="btn btn-danger">Cerrar Sesión</button>
         </form>
       {% else %}
-        <h2 class="card-title text-secondary">¡Bienvenido!</h2>
+        <h2 class="card-title text-dark">¡Bienvenido!</h2>
         <p class="card-text mt-3">
           Inicia sesión o regístrate para comenzar a entrenar
         </p>
