--- a/templates/_base.html
+++ b/templates/_base.html
@@ -2,13 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{% block title %}Ringo{% endblock %}</title>
 		<link
 			rel="shortcut icon"
-			href="assets/ringo_logo.png"
+			href="{% static 'img/ringo_logo.png' %}"
 			type="image/x-icon"
 		/>
 		<link rel="stylesheet" href="{% static 'css/style.css' %}" />
@@ -21,12 +20,21 @@
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 		/>
+
 		{% block extra_css %}{% endblock %}
 	</head>
 	<body>
+		{% comment %} Barra de navegacion {% endcomment %}
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container">
-				<a class="navbar-brand" href="{% url 'home' %}">RinGo</a>
+				<a class="navbar-brand d-flex align-items-center" href="{% url 'home' %}">
+					<img 
+						src="{% static 'img/ringo_logo.png' %}" 
+						alt="RinGo Logo" 
+						class="me-2" 
+						style="width: 50px; height: 50px; object-fit: auto;" />
+					RinGo
+				</a>
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -45,28 +53,38 @@
 							<a class="nav-link" href="{% url 'perfil_redireccion' %}">
 								<!-- Foto de perfil -->
 								{% if perfil and perfil.foto %}
-									<img 
-										src="{{ perfil.foto.url }}" 
-										alt="Foto de perfil" 
-										class="rounded-circle" 
-										style="width: 30px; height: 30px; object-fit: cover; margin-right: 8px;" />
+								<img
+									src="{{ perfil.foto.url }}"
+									alt="Foto de perfil"
+									class="rounded-circle"
+									style="
+										width: 30px;
+										height: 30px;
+										object-fit: cover;
+										margin-right: 8px;
+									"
+								/>
 								{% else %}
-									<img 
-										src="{% static 'img/default-user.png' %}" 
-										alt="Foto de perfil por defecto" 
-										class="rounded-circle" 
-										style="width: 30px; height: 30px; object-fit: cover; margin-right: 8px;" />
-								{% endif %}
-								Mi Perfil
+								<img
+									src="{% static 'img/default-user.png' %}"
+									alt="Foto de perfil por defecto"
+									class="rounded-circle"
+									style="
+										width: 30px;
+										height: 30px;
+										object-fit: cover;
+										margin-right: 8px;
+									"
+								/>
+								{% endif %} Mi Perfil
 							</a>
 						</li>
-						{% else %}
-						{% endif %}
+						{% else %} {% endif %}
 					</ul>
 				</div>
 			</div>
 		</nav>
-		
+
 		<!-- Contenido de la página -->
 		<div class="container">{% block content %} {% endblock %}</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
