--- a/templates/_base.html
+++ b/templates/_base.html
@@ -24,67 +24,66 @@
 		{% block extra_css %}{% endblock %}
 	</head>
 	<body>
-		{% comment %} Barra de navegacion {% endcomment %}
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<div class="container">
-				<a class="navbar-brand d-flex align-items-center" href="{% url 'home' %}">
-					<img 
-						src="{% static 'img/ringo_logo.png' %}" 
-						alt="RinGo Logo" 
-						class="me-2" 
-						style="width: 50px; height: 50px; object-fit: auto;" />
-					RinGo
-				</a>
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-bs-toggle="collapse"
-					data-bs-target="#navbarSupportedContent"
-					aria-controls="navbarSupportedContent"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-						{% if user.is_authenticated %}
-						<li class="nav-item">
-							<a class="nav-link" href="{% url 'perfil_redireccion' %}">
-								<!-- Foto de perfil -->
-								{% if perfil and perfil.foto %}
-								<img
-									src="{{ perfil.foto.url }}"
-									alt="Foto de perfil"
-									class="rounded-circle"
-									style="
-										width: 30px;
-										height: 30px;
-										object-fit: cover;
-										margin-right: 8px;
-									"
-								/>
-								{% else %}
-								<img
-									src="{% static 'img/default-user.png' %}"
-									alt="Foto de perfil por defecto"
-									class="rounded-circle"
-									style="
-										width: 30px;
-										height: 30px;
-										object-fit: cover;
-										margin-right: 8px;
-									"
-								/>
-								{% endif %} Mi Perfil
-							</a>
-						</li>
-						{% else %} {% endif %}
-					</ul>
-				</div>
-			</div>
-		</nav>
+{% comment %} Barra de navegacion {% endcomment %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <!-- Logo y enlace Home -->
+        <div class="d-flex align-items-center">
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img 
+                    src="{% static 'img/ringo_logo.png' %}" 
+                    alt="RinGo Logo" 
+                    style="width: 50px; height: 50px; object-fit: contain;" />
+                RinGo
+            </a>
+        </div>
 
+        <!-- Botón hamburguesa -->
+        <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+        >
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Menú colapsable -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                {% if user.is_authenticated %}
+                    <li class="nav-item me-4">
+                        <a class="nav-link" href="{% url 'perfil_redireccion' %}">
+                            {% if perfil and perfil.foto %}
+                                <img
+                                    src="{{ perfil.foto.url }}"
+                                    alt="Foto de perfil"
+                                    class="rounded-circle"
+                                    style="width: 30px; height: 30px; object-fit: cover; margin-right: 8px;" />
+                            {% else %}
+                                <img
+                                    src="{% static 'img/default-user.png' %}"
+                                    alt="Foto de perfil por defecto"
+                                    class="rounded-circle"
+                                    style="width: 30px; height: 30px; object-fit: cover; margin-right: 8px;" />
+                            {% endif %}
+                            Mi Perfil
+                        </a>
+                    </li>
+
+                    {% if es_miembro %}
+                        <li class="nav-item me-2">
+                            <a class="nav-link text-warning" href="{% url 'miembros_panel' %}">Panel Miembros</a>
+                        </li>
+                    {% endif %}
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+</nav>
 		<!-- Contenido de la página -->
 		<div class="container">{% block content %} {% endblock %}</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
