--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,23 @@
 {% extends "_base.html" %}
+{% load static %}
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="container d-flex justify-content-center align-items-center" style="min-height: 80vh;">
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 80vh; opacity: 0.9;">
   <div class="card shadow-lg text-center p-4" style="width: 100%; max-width: 400px;">
     <div class="card-body">
       {% if user.is_authenticated %}
-        <h2 class="card-title text-primary">¡Hola, {{ user.username }}!</h2>
+        <h2 class="card-title text-primary">¡Hola, {{ user.perfil.nombre_perfil| default:user.username }}!</h2>
         <p class="card-text mt-4">Te damos la bienvenida a RinGO</p>
         <form method="post" action="{% url 'logout' %}">
           {% csrf_token %}
           <button type="submit" class="btn btn-danger">Cerrar Sesión</button>
         </form>
       {% else %}
+      <img src="{% static 'img/ringo_logo.png' %}" 
+             alt="Logo de la empresa" 
+             class="rounded-circle mb-3" 
+             style="width: 150px; height: 150px; object-fit: cover;">
         <h2 class="card-title text-dark">¡Bienvenido!</h2>
         <p class="card-text mt-3">
           Inicia sesión o regístrate para comenzar a entrenar
