--- a/templates/perfil/perfil_detail.html
+++ b/templates/perfil/perfil_detail.html
@@ -17,7 +17,7 @@
   </div>
 
   <!-- Información del Perfil -->
-  <div class="col-md-5 col-lg-3">
+  <div class=" col-md-5 col-lg-4 col-xl-4">
     <ul class="list-group text-center">
       <li class="list-group-item"><strong>Edad:</strong> {{ perfil.edad}}</li>
       <li class="list-group-item"><strong>Género:</strong> {{ perfil.get_genero_display }}</li>
