--- a/templates/_base.html
+++ b/templates/_base.html
@@ -33,8 +33,9 @@
                 <img 
                     src="{% static 'img/ringo_logo.png' %}" 
                     alt="RinGo Logo" 
-                    style="width: 50px; height: 50px; object-fit: contain;" />
-                RinGo
+                    class="rounded-circle"
+                    style="width: 40px; height: 40px; object-fit: contain;" />
+                <span class='ms-2'>Rin<span style='color:red;'>GO</span></span>
             </a>
         </div>
 
@@ -73,7 +74,7 @@
                             Mi Perfil
                         </a>
                     </li>
-
+                    {% comment %} Vista para miembros {% endcomment %}
                     {% if es_miembro %}
                         <li class="nav-item me-2">
                             <a class="nav-link text-warning" href="{% url 'miembros_panel' %}">Panel Miembros</a>
