modifica contenedor de "editar perfil"

--- a/templates/perfil/perfil_confirm_delete.html
+++ b/templates/perfil/perfil_confirm_delete.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container d-flex justify-content-center align-items-center eliminar-card" style="min-height: 80vh;">
-  <div class="card shadow-sm" style="width: 100%; max-width: 500px;">
+  <div class="card shadow-sm" style="width: 100%; max-width: 500px;opacity: 0.7;">
     <div class="card-body text-center">
       <h2 class="card-title text-danger mb-4">Eliminar Perfil</h2>
       <p class="card-text">
