--- a/templates/perfil/perfil_form.html
+++ b/templates/perfil/perfil_form.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %}{% load static %} {% block content %}
 
-<div class="container mt-5 d-flex justify-content-center form-container mb-5">
+<div class="container-fluid mt-3 d-flex justify-content-center edit-form">
 	<div class="col-md-4">
 		<h3 class="text-center mb-4 mt-5">
 			{% if object.pk %}
