--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,6 +52,8 @@ body {
 .register-container{
     color: white;
     max-width: 600px;
+    max-height: 400px; 
+    overflow-y: auto;  
     margin: auto;
     padding: 4rem;
     background: rgba(0, 0, 0, 0.7);
@@ -75,17 +77,14 @@ body {
 }
 
 
-.form-container{
+.edit-form{
     color: white;
-    max-width: 400px;
     margin: 0 auto;
-    padding: 1rem;
     background: rgba(0, 0, 0, 0.7);
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 
 }
-
 
 .foto-container {
     position: relative;
@@ -135,3 +134,4 @@ h1 .panel-miembros{
 .home-nav{
     color: white;
 }
+
