--- a/templates/_base.html
+++ b/templates/_base.html
@@ -28,7 +28,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <!-- Logo y enlace Home -->
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center justify-content-start">
             <a class="navbar-brand" href="{% url 'home' %}">
                 <img 
                     src="{% static 'img/ringo_logo.png' %}" 
